Get rid of excess log files

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,11 @@
 .bundle/
 log/*.log
 pkg/
-test/dummy/db/*.sqlite3
-test/dummy/db/*.sqlite3-journal
-test/dummy/log/*.log
-test/dummy/tmp/
-test/dummy/.sass-cache
-test/dummy/config/database.yml
+spec/dummy/db/*.sqlite3
+spec/dummy/db/*.sqlite3-journal
+spec/dummy/log/*.log
+spec/dummy/tmp/
+spec/dummy/.sass-cache
+spec/dummy/config/database.yml
 vendor/ruby
-test/dummy/public/system
+spec/dummy/public/system
