--- a/.overcommit.yml
+++ b/.overcommit.yml
@@ -10,6 +10,10 @@ PostCheckout:
 # other checks that you want to run before you allow a commit object to be
 # created.
 PreCommit:
+  # disable haml-lint for now since it complains about things but has no way to disable said complaints
+  HamlLint:
+    enabled: false
+
   Jscs:
     description: 'Analyzing with JSCS'
     include: '**/*.js'
