--- a/.overcommit.yml
+++ b/.overcommit.yml
@@ -26,8 +26,8 @@ PreCommit:
   TravisLint:
     enabled: false
 
-  RunRSpec:
-    enabled: true
+  Rspec:
+    enabled: false
 
 # Hooks that are run against every commit message after a user has written it.
 # These hooks are useful for enforcing policies on commit messages written for a
