imported redirects into tenon from new.factore.ca

--- a/spec/dummy/config/i18n_fields.yml
+++ b/spec/dummy/config/i18n_fields.yml
@@ -1,5 +1,8 @@
 # list of the tables and columns that should have multiple languages generated
 tables:
+  redirects:
+    -
+
   post_categories:
     -
 
