fix table names in i18n_fields.yml

--- a/spec/dummy/config/i18n_fields.yml
+++ b/spec/dummy/config/i18n_fields.yml
@@ -1,16 +1,16 @@
 # list of the tables and columns that should have multiple languages generated
 tables:
-  tenon/events:
+  events:
     - title
     - location
 
-  tenon/pages:
+  pages:
     - title
     - seo_title
     - seo_keywords
     - seo_description
 
-  tenon/posts:
+  posts:
     - title
     - excerpt
     - seo_title
