gitignore .ruby-version

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
+*.gem
 .bundle/
+.ruby-version
 log/*.log
 pkg/
-spec/dummy/db/*.sqlite3
-spec/dummy/db/*.sqlite3-journal
-spec/dummy/log/*.log
-spec/dummy/tmp/
 spec/dummy/.sass-cache
 spec/dummy/config/database.yml
-spec/dummy/public/assets
-vendor/ruby
-spec/dummy/public/system
+spec/dummy/db/*.sqlite3
+spec/dummy/db/*.sqlite3-journal
 spec/dummy/db/migrate/
+spec/dummy/log/*.log
+spec/dummy/public/assets
+spec/dummy/public/system
+spec/dummy/tmp/
 tags
-*.gem
+vendor/ruby
