--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "babel-core": "^5.8.29",
     "es6-promise": "^3.0.2",
     "isomorphic-fetch": "^2.2.0",
+    "lodash": "^3.10.1",
     "react": "^0.13.3",
     "react-redux": "^0.8.2",
     "redux": "^1.0.0",
