--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "es6-promise": "^3.0.2",
     "isomorphic-fetch": "^2.2.0",
     "lodash": "^3.10.1",
-    "react": "^0.13.3",
+    "react": "^0.14.2",
+    "react-addons-css-transition-group": "^0.14.2",
     "react-redux": "^0.8.2",
     "redux": "^1.0.0",
     "redux-thunk": "^0.1.0"
