--- a/spec/dummy/config/database.yml
+++ b/spec/dummy/config/database.yml
@@ -15,7 +15,5 @@ test:
   database: tenon_dummy_test
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: postgresql
+  database: tenon_dummy_production
