--- a/spec/dummy/config/database.yml.template
+++ b/spec/dummy/config/database.yml.template
@@ -1,21 +1,5 @@
-# SQLite version 3.x
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem 'sqlite3'
-development:
+oak:
   adapter: postgresql
-  database: tenon_dummy_development
-
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
-test:
-  adapter: postgresql
-  database: tenon_dummy_test
-
-production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+  database: tenon_oak
+  user: tenon
+  password: q9nTJtm4prPsKv9k
