--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -40,8 +40,8 @@ Lint/Debugger:
 # Cop supports --auto-correct.
 # Configuration parameters: AlignWith, SupportedStyles, AutoCorrect.
 # SupportedStyles: keyword, variable, start_of_line
-# Lint/EndAlignment:
-#   Enabled: false
+Lint/EndAlignment:
+  Enabled: false
 
 # Offense count: 3
 Lint/ParenthesesAsGroupedExpression:
@@ -61,11 +61,6 @@ Lint/UnusedBlockArgument:
     - 'lib/tenon/engine.rb'
     - 'lib/tenon/has_history/attr_serializer.rb'
     - 'lib/tenon/tenon_content.rb'
-
-# Offense count: 1
-Lint/UselessAccessModifier:
-  Exclude:
-    - 'spec/dummy/app/models/menu_item.rb'
 
 # Offense count: 10
 Lint/UselessAssignment:
