--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "es6-promise": "^3.0.2",
     "isomorphic-fetch": "^2.2.0",
     "lodash": "^3.10.1",
+    "pluralize": "^1.2.1",
     "react": "^0.14.6",
     "react-addons-css-transition-group": "^0.14.2",
     "react-dom": "^0.14.6",
