--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-addons-css-transition-group": "^0.14.2",
     "react-dom": "^0.14.6",
     "react-dragula": "^1.1.15",
+    "react-portal": "^2.1.0",
     "react-redux": "^0.8.2",
     "redux": "^1.0.0",
     "redux-thunk": "^0.1.0"
