--- a/spec/dummy/config/database.yml
+++ b/spec/dummy/config/database.yml
@@ -5,14 +5,14 @@
 #   gem 'sqlite3'
 development:
   adapter: postgresql
-  database: tenon_dummy_development
+  database: tenon_dummy_1x_development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
-  database: tenon_dummy_test
+  database: tenon_dummy_1x_test
 
 production:
   adapter: postgresql
